fix: color contrast of chips

--- a/src/style.scss
+++ b/src/style.scss
@@ -185,7 +185,7 @@ button {
 }
 
 .chip {
-  background: var(--surface-3);
+  background: var(--surface-2);
   cursor: default;
   height: fit-content;
   font-size: calc(var(--rfc-regular) * 0.85);
